[package]

name = "fst_cmd"
version = "0.0.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

[lib]
name = "fst_cmd"
crate_type = ["dylib"]

[dependencies]
libc = "0.2.2"
fst = "0.1.26"
lazy_static = "0.1.15"

[dependencies.concat_bytes]
git = "https://github.com/badboy/concat_bytes"
branch = "binary-to-bytestr"

[dependencies.redis_dynamic]
path = "../redis_dynamic"
