[package]

name = "pong"
version = "0.0.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

[lib]
name = "pong"
crate_type = ["dylib"]

[dependencies]
libc = "0.2.2"

[dependencies.concat_bytes]
git = "https://github.com/badboy/concat_bytes"
branch = "binary-to-bytestr"

[dependencies.redis_dynamic]
path = "../redis_dynamic"
